[package]
name = "stm32f103-tft-board-boe-suite"
version = "0.1.0"
edition = "2024"
authors = ["jmjoy <jmjoy@apache.org>"]
license = "MulanPSL-2.0"
repository = "https://github.com/jmjoy/stm32f103-tft-board-boe-suite"
rust-version = "1.85"

[dependencies]
as-what = "0.1.1"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
num_enum = { version = "0.7.3", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
